# nutshell

./: Cargo.toml  init.fish  rustfmt.toml  shell.nix
src/: config.rs  main.rs
src/cmd/: cmd.rs  init.rs  mod.rs  set.rs
